SCAD-0001[Inclui api de cadastro de usuario]
